--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,9 @@
-body {
-    position: relative;
+/* body {
+
     width: 1600px;
     height: 2350px;
     background: #FFFFFF;
     overflow: hidden;
-}
-
-header {
-    
 }
 
 ul {
@@ -18,4 +14,4 @@ ul li {
     float: left;
     padding: 10px;
     margin: 10px;
-}
+} */
